--- a/public/assets/css/theme.css
+++ b/public/assets/css/theme.css
@@ -12,7 +12,7 @@
  * Bootstrap v5.0.0-alpha1 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
  * Copyright 2011-2020 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+ *  Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 :root {
   --bs-blue: #5F37EF;
@@ -18206,7 +18206,137 @@ label {
 }
 
 /*-----------------------------------------------
-|   User Styles
+|   Estilos personalizado
 -----------------------------------------------*/
 
-/*# sourceMappingURL=theme.css.map */
+/*---------------------
+  Pricing Section
+-----------------------*/
+
+.pricing-section {
+	padding-bottom: 60px;
+}
+
+.pricing__swipe-btn {
+	border: 1px solid #4c57d6;
+	border-radius: 50px;
+	height: 52px;
+	width: 266px;
+	float: right;
+}
+
+.pricing__swipe-btn label {
+	font-size: 15px;
+	color: #444444;
+	font-weight: 700;
+	text-transform: uppercase;
+	display: inline-block;
+	padding: 12px 30px 12px;
+	border-radius: 50px;
+	margin-right: -4px;
+	position: relative;
+	top: 2px;
+	left: 2px;
+	cursor: pointer;
+}
+
+.pricing__swipe-btn label.active {
+	background: #4c57d6;
+	color: #ffffff;
+}
+
+.pricing__swipe-btn label input {
+	position: absolute;
+	visibility: hidden;
+}
+
+.monthly__plans,
+.yearly__plans {
+	display: none;
+}
+
+.monthly__plans.active,
+.yearly__plans.active {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+}
+
+.pricing__item {
+	text-align: center;
+	padding-bottom: 20px;
+	padding-top: 22px;
+	background: #ffffff;
+	padding-left: 20px;
+	padding-right: 20px;
+	-webkit-box-shadow: 0px 0px 10px rgba(18, 8, 81, 0.1);
+	box-shadow: 0px 0px 10px rgba(18, 8, 81, 0.1);
+	-webkit-transition: all 0.3s;
+	-o-transition: all 0.3s;
+	transition: all 0.3s;
+	margin-bottom: 40px;
+}
+
+.pricing__item:hover {
+	-webkit-box-shadow: 0px 8px 30px rgba(18, 8, 81, 0.2);
+	box-shadow: 0px 8px 30px rgba(18, 8, 81, 0.2);
+}
+
+.pricing__item:hover h3 {
+	background: #4c57d6;
+}
+
+.pricing__item:hover .primary-btn {
+	background: #4c57d6;
+	color: #ffffff;
+}
+
+.pricing__item h4 {
+	color: #111111;
+	font-weight: 700;
+	margin-bottom: 20px;
+}
+
+.pricing__item h3 {
+	background: #120851;
+	font-weight: 700;
+	color: #ffffff;
+	padding: 24px 0 20px;
+	margin-bottom: 26px;
+	margin-left: -30px;
+	border-radius: 10px;
+	margin-right: -30px;
+	-webkit-transition: all 0.3s;
+	-o-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.pricing__item h3 span {
+	font-size: 16px;
+	font-weight: 400;
+}
+
+.pricing__item ul {
+	margin-bottom: 26px;
+}
+
+.pricing__item ul li {
+	font-size: 14px;
+	color: #444444;
+	line-height: 40px;
+	list-style: none;
+}
+
+.pricing__item .primary-btn {
+	color: #111111;
+	background: #f2f2f2;
+	display: block;
+	-webkit-transition: all 0.3s;
+	-o-transition: all 0.3s;
+	transition: all 0.3s;
+	padding: 14px 0 12px;
+}
+
+.precios {
+  justify-content: center;
+}
